--- a/index.html
+++ b/index.html
@@ -64,21 +64,19 @@
          </div>
          <div class="xia_tupian ani"  swiper-animate-effect="rotateIn" swiper-animate-duration="1.5s" swiper-animate-delay="2s">
            <p style="margin-top: 3%" class="ani"  swiper-animate-effect="fadeInUpBig" swiper-animate-duration="1.5s" swiper-animate-delay="3s" >
-             办学宗旨  Educational Principle<br>
-             以市场需求为导向，以高新就业为目标，培养技能过硬、素质优秀、具备成为技术骨干和主管潜质的专业人才，致力打造现代职业教育品牌。
+             <h2>技术支持</h2>
            </p>
-           <p style="margin-top:20%" class="ani"  swiper-animate-effect="fadeInUpBig" swiper-animate-duration="1.5s" swiper-animate-delay="3s">
-             口  号 SLogan<br>
-             学好硬本领，赢在软实力。
-           </p>
-           <p  style="margin-top:32%" class="ani"  swiper-animate-effect="fadeInUpBig" swiper-animate-duration="1.5s" swiper-animate-delay="3s">
-             管理文化  Management Culture<br>
-             潜能无限，感恩奉献，正确归因，内外方圆。
-           </p>
-           <p  style="margin-top:45%" class="ani"  swiper-animate-effect="fadeInUpBig" swiper-animate-duration="1.5s" swiper-animate-delay="3s">
-             员工精神  Staff Spirit<br>
-             立意高远，精益求精。
-           </p>
+           <span>
+             1.精通HTML、CSS熟练进行页面开发，具备良好代码规范并独立快速完成页面开发;<br>
+             2.熟练掌握 HTML5以及CSS3新特性,并且运用到网页开发当中;<br>
+             3.熟悉JavaScript、DOM、BOM等原生JS代码，能够快速独立完成页面功能;<br>
+             4.熟练掌握 jQuery 框架技术,了解基本原理,能够使用 jQuery 实现页面功能;<br>
+             5.熟练掌握Bootstrap响应式布局，能够熟练开发响应式web应用；<br>
+             6.熟练掌握vue.js框架,进行网页开发,实现各种功能操作<br>
+
+           </span>
+
+
          </div>
        </div>
       </div>
